	mysql : prevent hashing the fields that looks like inner requests
	vm : optimized global fields cache
	std : string_split doesn't copy the string anymore if the pattern is not found
	vm : added neko_vm_dump_stack
	std : use per-thread locale on POSIX systems
	std : url_encode does not encode anymore - and . chars
	std : fixed sleep() for unix (more accurate and deal with signals)

2008-07-28 : 1.7.1
	nekotools : fixed set_return_code in web server
	std : display windowed application in process_run
	mod_neko : allowed to uncache module with set_main(null)
	mod_neko : use strmcpi for set_header("Content-Type")
	nekoc : one last fix for big arrays (first element was not compiled)
	mod_neko : added get_http_method
	nekoml : minor fixes in lexer
	nekoml : added -pack and -use, auto build nekoml.std
	include nekoml as part of standard distribution
	vm/security : $smake now fills the string with 0
	std/int32 : fixed need_32_bits macro (negative values)
	bugfix : >> and >>> were reversed in JIT
	bugfix : date functions are now MT-safe
	removed context.h and context.c
	added lock and tls multithread API to neko.h
	std : added date_get_tz()
	mod_neko : added log_message
	regexp : fix for unmatched optional groups, return null instead of empty string
	threads : for windows, use critical_section instead of mutex for locks
	threads : for posix, use a recursive mutex which match windows behavior
	std : added mutex and deque api (threads)

2008-03-16 : 1.7.0
	nekoc : allow binary ast format with -p, don't allow inline nxml
	std : allow int32_new float parameter
	vm : reduce debug infos memory size by 16
	vm : fixed $int in case of overflow
	regexp : upgraded windows ndll to use pcre 7.3 with utf8 support
	fixed : math_round(0.5) is now 1
	fixed : date_set_hour and date_set_day crash with invalid dates
	fixed : bug in vm/callback.c when stack address is >2GB
	sockets : added support for socket_poll for Windows
	sockets : added socket_poll_prepare and socket_poll_events